--- a/app/src/main/res/drawable/state_pressed_yellow.xml
+++ b/app/src/main/res/drawable/state_pressed_yellow.xml
@@ -2,7 +2,7 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#F5F5F5">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/colorPoint"/>
+            <stroke android:width="2dp" android:color="@color/colorYellow"/>
             <corners
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"
