--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".SignUpActivity"
     android:background="@color/colorPrimary">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,6 +27,7 @@
                 android:textColor="#20252C">
             </TextView>
         </android.support.v7.widget.Toolbar>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="140dp"
@@ -141,6 +143,13 @@
             android:layout_marginRight="36dp"
             android:layout_marginTop="20dp"
             android:orientation="vertical">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="215dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -157,7 +166,7 @@
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
-                android:imeOptions="actionNext"
+                android:inputType="text"
                 android:layout_marginTop="6.1dp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -176,7 +185,7 @@
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
-                android:imeOptions="actionDone"
+                android:inputType="text"
                 android:layout_marginTop="6.1dp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -219,6 +228,8 @@
                     style="?android:attr/borderlessButtonStyle"
                     />
             </LinearLayout>
+            </LinearLayout>
+            </ScrollView>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -236,5 +247,6 @@
                     style="?android:attr/borderlessButtonStyle"/>
             </RelativeLayout>
         </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
