TicketOnboardingActivity & TicketActivity update

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -138,14 +138,11 @@
         </FrameLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:layout_marginTop="20dp"
             android:orientation="vertical">
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="215dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -167,7 +164,12 @@
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
                 android:inputType="text"
-                android:layout_marginTop="6.1dp"/>
+                android:layout_marginTop="6.1dp"
+                android:paddingBottom="10.5dp"
+                android:paddingTop="10.5dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -186,7 +188,11 @@
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
                 android:inputType="text"
-                android:layout_marginTop="6.1dp"/>
+                android:layout_marginTop="6.1dp"
+                android:paddingBottom="10.5dp"
+                android:paddingTop="10.5dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -229,24 +235,23 @@
                     />
             </LinearLayout>
             </LinearLayout>
-            </ScrollView>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="20dp">
-                <Button
-                    android:layout_alignParentBottom="true"
-                    android:id="@+id/btn_certify"
-                    android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/state_pressed_orange"
-                    android:text="인증하기"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorPoint"
-                    style="?android:attr/borderlessButtonStyle"/>
-            </RelativeLayout>
         </LinearLayout>
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
+            android:layout_marginBottom="20dp">
+            <Button
+                android:layout_alignParentBottom="true"
+                android:id="@+id/btn_certify"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:background="@drawable/state_pressed_orange"
+                android:text="인증하기"
+                android:textSize="14dp"
+                android:textColor="@color/colorPoint"
+                style="?android:attr/borderlessButtonStyle"/>
+        </RelativeLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
