--- a/app/src/main/res/layout/activity_certification_w.xml
+++ b/app/src/main/res/layout/activity_certification_w.xml
@@ -50,7 +50,13 @@
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
-                android:layout_marginTop="6.1dp"/>
+                android:layout_marginTop="6.1dp"
+                android:paddingBottom="10.5dp"
+                android:paddingTop="10.5dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:inputType="text"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -68,7 +74,13 @@
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
                 android:textColorHint="#1E20252C"
-                android:layout_marginTop="6.1dp"/>
+                android:layout_marginTop="6.1dp"
+                android:paddingBottom="10.5dp"
+                android:paddingTop="10.5dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:inputType="text"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
