--- a/app/src/main/res/layout/activity_ticket_onboarding.xml
+++ b/app/src/main/res/layout/activity_ticket_onboarding.xml
@@ -40,6 +40,7 @@
             <android.support.design.widget.TabLayout
                 app:tabBackground="@drawable/page_indicator_selector"
                 app:tabIndicatorHeight="0dp"
+                app:tabRippleColor="@null"
                 android:id="@+id/tab_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
