--- a/app/src/main/res/layout/activity_alliance_list.xml
+++ b/app/src/main/res/layout/activity_alliance_list.xml
@@ -26,6 +26,89 @@
                 android:textColor="#20252C">
             </TextView>
         </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:weightSum="9.99"
+        android:background="@drawable/rectangle_gray_solid">
+        <Button
+            android:id="@+id/btn_date_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="신촌/홍대"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:textSize="14sp"
+            android:textColor="#FC7F2D"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_weight="3.33"/>
+        <Button
+            android:id="@+id/btn_date_2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="건대/왕십리"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:textSize="14sp"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_weight="3.33"/>
+        <Button
+            android:id="@+id/btn_date_3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="강남"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:textSize="14sp"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_weight="3.33"/>
+        </LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="7.1dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="*프리미엄 제휴매장에서 제휴쿠폰 받아가세요!"
+                        android:textSize="13dp"
+                        android:textColor="@color/colorBlack"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="*당일날 해당 지역에서 사용 가능한 제휴쿠폰을 드립니다!"
+                        android:textSize="13dp"
+                        android:textColor="@color/colorBlack"
+                        android:layout_marginTop="5dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="*매칭 채팅에서 쿠폰 사용하기를 직원에게 부탁하세요!"
+                        android:textSize="13dp"
+                        android:textColor="@color/colorBlack"
+                        android:layout_marginTop="5dp"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginTop="12.1dp">
+                    
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
