--- a/app/src/main/res/drawable/top_rounded_no_stroke.xml
+++ b/app/src/main/res/drawable/top_rounded_no_stroke.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF"/>
-    <stroke android:width="1dp" android:color="#E0E0E0" />
     <corners
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp"/>
-    <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
+    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
