--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorGoogle">#DC4E41</color>
     <color name="colorNonselect">#C6C6C6</color>
     <color name="colorYellow">#FFC850</color>
+    <color name="colorGreen">#00AB66</color>
 </resources>
