--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -147,13 +147,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="닉네임"
-                android:textColor="#414141"
-                android:textSize="14dp"
-                />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="닉네임"
+                        android:textColor="#414141"
+                        android:textSize="14dp"
+                        />
+                    <TextView
+                        android:id="@+id/tv_available_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="사용 불가능한 닉네임입니다."
+                        android:layout_marginLeft="7dp"
+                        android:textSize="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorRed"
+                        android:visibility="invisible"/>
+                </LinearLayout>
+
             <EditText
                 android:id="@+id/et_nickname"
                 android:layout_width="match_parent"
