MeetingApplication add animation

--- a/app/src/main/res/layout/activity_meeting_application.xml
+++ b/app/src/main/res/layout/activity_meeting_application.xml
@@ -127,7 +127,7 @@
                         android:id="@+id/btn_select_2vs2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="2:2 소개팅"
                         android:textStyle="bold"
@@ -137,7 +137,7 @@
                         android:id="@+id/btn_select_3vs3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="3:3 미팅"
                         android:textStyle="bold"
@@ -147,7 +147,7 @@
                         android:id="@+id/btn_select_4vs4"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="4:4 미팅"
                         android:textStyle="bold"
@@ -272,7 +272,7 @@
                         android:id="@+id/btn_select_place1"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="신촌/홍대"
                         android:textStyle="bold"
@@ -282,7 +282,7 @@
                         android:id="@+id/btn_select_place2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="건대/왕십리"
                         android:textStyle="bold"
@@ -292,7 +292,7 @@
                         android:id="@+id/btn_select_place3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="62dp"
                         android:background="@drawable/button_background_non_select"
                         android:text="강남"
                         android:textStyle="bold"
