--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerificationActivity"
+    tools:context=".Activity.VerificationActivity"
     android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
