--- a/app/src/main/res/layout/activity_whatis_yamigu.xml
+++ b/app/src/main/res/layout/activity_whatis_yamigu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WhatisYamiguActivity"
+    tools:context=".Activity.WhatisYamiguActivity"
     android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
