--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,7 +61,7 @@
                         android:layout_marginTop="20dp"
                         />
                 </LinearLayout>
-                <com.yamigu.yamigu_app.MyMeetingCard
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -73,16 +73,16 @@
                     app:date="28일"
                     app:dday="Today"
                     >
-                </com.yamigu.yamigu_app.MyMeetingCard>
-                <com.yamigu.yamigu_app.MyMeetingCard_Chat
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
-                </com.yamigu.yamigu_app.MyMeetingCard_Chat>
-                <com.yamigu.yamigu_app.MyMeetingCard
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -94,16 +94,16 @@
                     app:date="28일"
                     app:dday="Today"
                     >
-                </com.yamigu.yamigu_app.MyMeetingCard>
-                <com.yamigu.yamigu_app.MyMeetingCard_Chat
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
-                </com.yamigu.yamigu_app.MyMeetingCard_Chat>
-                <com.yamigu.yamigu_app.MyMeetingCard
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -115,15 +115,15 @@
                     app:date="28일"
                     app:dday="Today"
                     >
-                </com.yamigu.yamigu_app.MyMeetingCard>
-                <com.yamigu.yamigu_app.MyMeetingCard_Chat
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
+                <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
-                </com.yamigu.yamigu_app.MyMeetingCard_Chat>
+                </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,7 +157,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
-                            <com.yamigu.yamigu_app.WaitingTeamCard
+                            <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
@@ -169,9 +169,9 @@
                                 app:date="5월28일"
                                 app:place="신촌/홍대"
                                 >
-                            </com.yamigu.yamigu_app.WaitingTeamCard>
+                            </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard>
 
-                            <com.yamigu.yamigu_app.WaitingTeamCard
+                            <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
@@ -181,7 +181,7 @@
                                 app:description="한명이 술을 잘 못마셔요!"
                                 app:place="신촌/홍대"
                                 app:profile1="연세대학교 (24)"
-                                app:profile2="전기전자공학부"></com.yamigu.yamigu_app.WaitingTeamCard>
+                                app:profile2="전기전자공학부"></com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard>
                         </LinearLayout>
                     </HorizontalScrollView>
                 </FrameLayout>
@@ -209,7 +209,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                        <com.yamigu.yamigu_app.TodayScheduledTeamCard
+                        <com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical|center_horizontal"
@@ -218,8 +218,8 @@
                             app:man="연세대학교 24살"
                             app:woman="이화여자대학교 21살"
                             >
-                        </com.yamigu.yamigu_app.TodayScheduledTeamCard>
-                        <com.yamigu.yamigu_app.TodayScheduledTeamCard
+                        </com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard>
+                        <com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical|center_horizontal"
@@ -227,7 +227,7 @@
                             app:man="고려대학교 22살"
                             app:woman="연세대학교 22살"
                             >
-                        </com.yamigu.yamigu_app.TodayScheduledTeamCard>
+                        </com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard>
                     </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
