--- a/app/src/main/res/layout/fragment_filter_set.xml
+++ b/app/src/main/res/layout/fragment_filter_set.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/filter_fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="424dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:rsb="http://schemas.android.com/tools"
-    android:background="@color/colorPrimary">
+    >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="424dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"
         >
         <TextView
             android:layout_width="wrap_content"
