--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -128,13 +128,29 @@
         </TextView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="102.6dp">
+            android:layout_height="102.6dp"
+            android:weightSum="10">
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3">
+                <com.yamigu.yamigu_app.CustomLayout.CircularImageView
+                    android:id="@+id/iv_profile"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/account"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/description"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="7"
                 android:gravity="center_horizontal|center_vertical"
                 android:textStyle="bold"
                 android:textSize="16sp"
